--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-    --primary: #fe2c55;
+    --primary: rgb(254, 44, 85);
     --black: #000;
     --white: #fff;
     --text: #444444;
+    --check-icon-color: rgb(32, 213, 236);
 
     //Default layout
     --default-layout-header-height: 60px;
