--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,9 +19,6 @@
     justify-content: space-between;
 }
 
-.logo {
-}
-
 .search {
     position: relative;
     width: 361px;
@@ -86,4 +83,16 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.search-result {
+    width: 361px;
+}
+
+.search-title {
+    padding: 6px 12px;
+    font-size: 1.4rem;
+    color: rgba(22, 24, 35, 0.5);
+    line-height: 20px;
+    font-weight: 600;
 }
